kustomizations/jats-ref-refinery/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jats-ref-refinery
  namespace: journal
spec:
  template:
    spec:
      securityContext:
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      containers:
      - name: jats-ref-refinery
        image: ghcr.io/elifesciences/jats-ref-refinery:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 0.5
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          periodSeconds: 2
          failureThreshold: 5
          timeoutSeconds: 2
